# artisan

./: .gitignore
src/: DEVELOPMENT.md  pyproject.toml
src/Artisan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/RL_training/: __init__.py  aillio_dummy.py  environment.py  train.py  training.py
src/RL_training/DQN/: __init__.py  dqn_agent.py  q_network.py  replay_buffer.py
src/artisanlib/: aillio_dummy.py  canvas.py  comm.py  devices.py  main.py
src/includes/Machines/Aillio/: Bullet_Dummy.aset
