[project]
name = 'Artisan'
version = "0.0.1"
description = "Artisan is a software that helps coffee roasters record, analyze, and control roast profiles."
readme = {file = 'README.txt', content-type='text/markdown'}
authors = [
    {name = 'Rafael Cobo'},
    {name = 'Marko Luther'},
    {name = 'Dave Baxter'}
]
maintainers = [
    {name = 'Marko Luther'},
    {name = 'Dave Baxter'}
]
license-files = ['LICENSE']
requires-python = '>=3.12'
keywords = ['roasting', 'roast logging', 'speciality coffee']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    "Operating System :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Other/Nonlisted Topic'
]

dependencies = [
    "aiohttp==3.13.2",
    "aiohttp-jinja2==1.6",
    "appnope==0.1.4 ; sys_platform == 'darwin'",
    "arabic-reshaper==3.0.0",
    "babel==2.17.0",
    "bleak==2.0.0",
    "build==1.3.0 ; sys_platform == 'win32'",
    "colorspacious==1.1.2",
    "distro==1.9.0 ; sys_platform == 'linux'",
    "jinja2==3.1.6",
    "keyring==25.7.0",
    "lxml==6.0.2",
    "matplotlib==3.10.8",
    "numpy==2.4.0",
    "openpyxl==3.1.5",
    "persist-queue==1.1.0",
    "phidget22==1.23.20251006",
    "pillow==12.0.0",
    "portalocker==3.2.0",
    "prettytable==3.17.0",
    "protobuf==6.33.2",
    "psutil==7.1.3",
    "pydantic==2.12.5",
    "pyinstaller==6.17.0 ; sys_platform == 'darwin' or sys_platform == 'linux'",
    "pyinstaller-versionfile==3.0.1 ; sys_platform == 'win32'",
    "pymodbus==3.11.4",
    "pyobjc-core==12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa==12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-corebluetooth==12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-libdispatch==12.1 ; sys_platform == 'darwin'",
    "pyqt6==6.10.1",
    "pyqt6-webengine==6.10.0",
    "pyserial==3.5",
    "python-bidi==0.6.7",
    "python-snap7==2.0.2",
    "python-statemachine==2.5.0",
    "pyusb==1.3.1",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "qrcode==8.2",
    "qt6-tools==6.5.0.1.3",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "scipy==1.16.3",
    "secretstorage==3.5.0 ; sys_platform == 'linux'",
    "setuptools==70.3.0",
    "torch>=2.9.1",
    "tzdata==2025.3 ; sys_platform == 'win32'",
    "unidecode==1.4.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "wquantiles==0.6",
    "xlrd==2.0.2",
    "yoctopuce==2.1.6320",
]

[dependency-groups]
dev = [
    "async-timeout==5.0.1",
    "codespell==2.4.1",
    "coverage>=7.13.0",
    "coverage-badge==1.1.2",
    "cycler==0.12.1",
    "hypothesis>=6.148.8",
    "lxml-stubs>=0.5.1",
    "mypy==1.19.1",
    "pre-commit>=4.5.1",
    "pylint==4.0.4",
    "pyright==1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-datadir==1.8.0",
    "pytest-mock==3.15.1",
    "ruff>=0.14.9",
    "scipy-stubs==1.16.3.3",
    "types-docutils>=0.22.3.20251115",
    "types-openpyxl>=3.1.5.20250919",
    "types-pillow>=10.2.0.20240822",
    "types-protobuf>=6.32.1.20251210",
    "types-psutil>=7.1.3.20251211",
    "types-pyserial>=3.5.0.20251001",
    "types-python-dateutil==2.9.0.20251115",
    "types-pytz>=2025.2.0.20251108",
    "types-pyyaml>=6.0.12.20250915",
    "types-qrcode>=8.2.0.20250914",
    "types-requests>=2.32.4.20250913",
    "types-setuptools>=80.9.0.20251223",
    "types-urllib3>=1.26.25.14",
    "types-xlrd>=2.0.0.20251020",
]

[project.urls]
'Homepage' = 'https://artisan-scope.org/'
'Documentation' = 'https://artisan-scope.org/docs/quick-start-guide/'
'Repository' = 'https://github.com/artisan-roaster-scope/artisan'
'Issue Tracker' = 'https://github.com/artisan-roaster-scope/artisan/issues'
'Changelog' = 'https://github.com/artisan-roaster-scope/artisan/blob/master/wiki/ReleaseHistory.md'


## black

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

## pylint conf

[tool.pylint.MASTER]
load-plugins = [
#    'pylint.extensions.bad_builtin', # suggest comprehension over filter/join/map
    'pylint.extensions.check_elif',
#    'pylint.extensions.code_style', # suggests the := operator; NOT YET
    'pylint.extensions.comparison_placement',
#    'pylint.extensions.confusing_elif', # nested if => functions; NOT YET
    'pylint.extensions.docparams',
    'pylint.extensions.docstyle',
    'pylint.extensions.eq_without_hash',
    'pylint.extensions.for_any_all',
    'pylint.extensions.overlapping_exceptions',
    'pylint.extensions.private_import',
    'pylint.extensions.set_membership',
    'pylint.extensions.typing',
#    'pylint.extensions.redefined_variable_type', # NOT YET
#    'pylint.extensions.mccabe', # complexity rating for functions; NOT YET
    'pylint.extensions.no_self_use'
]
ignore-paths = [ "^uic/.*$",
                 "^build/.*$",
                 "^dist/.*$",
                 "^proto/.*$",
                 "^test/.*$",
                 "^.pytype/.*$" ]

# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use.
jobs = "0"

# Minimum supported python version
py-version = "3.12"

# Pickle collected data for later comparisons.
persistent = "yes"

# A comma-separated list of package or module names from where C extensions may
# be loaded. Extensions are loading into the active Python interpreter and may
# run arbitrary code.
extension-pkg-allow-list='''PyQt6'''

[tool.pylint.'MESSAGES CONTROL']

# Disable the message, report, category or checker with the given id(s). You
# can either give multiple identifiers separated by comma (,) or put this
# option multiple times (only on the command line, not in the configuration
# file where it should appear only once). You can also use "--disable=all" to
# disable everything first and then re-enable specific checks. For example, if
# you want to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable='''
        line-too-long,
        too-many-lines,
        trailing-whitespace,
        missing-final-newline,
        trailing-newlines,
        multiple-statements,
        multiple-imports,
        wrong-import-order,
        ungrouped-imports,
        wrong-import-position,
        useless-import-alias,
        import-outside-toplevel,
        empty-docstring,
        missing-module-docstring,
        missing-class-docstring,
        missing-function-docstring,
        invalid-name,
        too-many-statements,
        too-many-branches,
        too-many-ancestors,
        too-many-instance-attributes,
        too-few-public-methods,
        too-many-public-methods,
        too-many-return-statements,
        too-many-branches,
        too-many-arguments,
        too-many-locals,
        too-many-boolean-expressions,
        too-many-nested-blocks,
        too-many-positional-arguments,
        cyclic-import,
        duplicate-code,
'''

#        raw-checker-failed,
#        bad-inline-option,
#        locally-disabled,
#        file-ignored,
#        suppressed-message,
#        useless-suppression,
#        deprecated-pragma,
#        use-symbolic-message-instead,
#        wrong-spelling-in-comment,
#        wrong-spelling-in-docstring,
#        invalid-characters-in-docstring,
#        unnecessary-dunder-call,
#        bad-file-encoding,
#        bad-classmethod-argument,
#        bad-mcs-method-argument,
#        bad-mcs-classmethod-argument,
#        single-string-used-for-slots,
#        unnecessary-lambda-assignment,
#        unnecessary-direct-lambda-call,
#        non-ascii-name,
#        non-ascii-module-import,

#        superfluous-parens,
#        mixed-line-endings,
#        unexpected-line-ending-format,

#        unneeded-not,
#        consider-using-enumerate,
#        consider-iterating-dictionary,
#        consider-using-dict-items,
#        use-maxsplit-arg,
#        use-sequence-for-iteration,
#        consider-using-f-string,
#        use-implicit-booleaness-not-len,
#        use-implicit-booleaness-not-comparison,


#        disallowed-name,
#        typevar-name-incorrect-variance,
#        typevar-double-variance,
#        typevar-name-mismatch,

#        singleton-comparison,
#        unidiomatic-typecheck,
#        useless-option-value,
#        no-classmethod-decorator,
#        no-staticmethod-decorator,
#        useless-object-inheritance,
#        property-with-parameters,
#        consider-using-from-import,
#        consider-merging-isinstance,
#        simplifiable-if-statement,
#        redefined-argument-from-local,
#        no-else-return,
#        consider-using-ternary,
#        trailing-comma-tuple,
#        stop-iteration-return,
#        simplify-boolean-expression,
#        inconsistent-return-statements,
#        useless-return,
#        consider-swap-variables,
#        consider-using-join,
#        consider-using-in,
#        consider-using-get,
#        chained-comparison,
#        consider-using-dict-comprehension,
#        consider-using-set-comprehension,
#        simplifiable-if-expression,
#        no-else-raise,
#        unnecessary-comprehension,
#        consider-using-sys-exit,
#        no-else-break,
#        no-else-continue,
#        super-with-arguments,
#        simplifiable-condition,
#        condition-evals-to-constant,
#        consider-using-generator,
#        use-a-generator,
#        consider-using-min-builtin,
#        consider-using-max-builtin,
#        consider-using-with,
#        unnecessary-dict-index-lookup,
#        use-list-literal,
#        use-dict-literal,
#        unnecessary-list-index-lookup,
#        literal-comparison,
#        comparison-with-itself,
#        comparison-of-constants,
#        no-self-use,

# Enable the message, report, category or checker with the given id(s). You can
# either give multiple identifier separated by comma (,) or put this option
# multiple time (only on the command line, not in the configuration file where
# it should appear only once). See also the "--disable" option for examples.
enable='''c-extension-no-member,'''


## mypy conf

[tool.mypy]
files = ["artisanlib/*.py", "plus/*.py", "test/**/*.py"]
exclude = ['build', 'dist', 'uic', 'misc']
python_version = "3.12"

# Ensure full coverage
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true


# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

# Some more checks
local_partial_types = true
strict_equality = true

# Know exactly what we're doing
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true

enable_error_code = "possibly-undefined,truthy-bool,redundant-expr,unused-awaitable, explicit-override, ignore-without-code"

# Explicit is better than implicit
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["libusb_package.*"]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "uic.*"
follow_imports = 'skip'


## ruff conf

[tool.ruff]
include = ["artisanlib/*.py", "plus/*.py", "test/*.py", "test/**/*.py"]

# Enable pycodestyle (`E`), Pyflakes (`F`), Updates ('UP'), flake8-bugbear (`B`) codes by default.
# also flake8-2020 (YTT), flake8-commas (COM), flake8-comprehensions (C4),
# flake8-datetimez (DTZ), flake8-pie (PIE), flake8-raise (RSE), flake8-return (RET),
# flake8-simplify (SIM), flake8-gettext (INT), flake8-unused-arguments (ARG),
# Error (PLE), Refactor (PLR), Warning (PLW)
## next: flake8-use-pathlib (PTH), flake8-print (T20)
lint.select = ["E", "F", "UP", "B", "A", "YTT", "COM", "C4", "DTZ", "PIE", "RSE", "RET", "SIM", "ARG", "PLE", "PLR", "PLW", "INT", "RUF013"]

# Never enforce `E501` (line length violations).
lint.ignore = ["E501", "E741", "E402", "PLR0912", "PLR0913", "PLR0915", "SIM105", "PLR2044", "PLR2004", "PLW0603", "PLR0911", "COM812", "A005"]

output-format = "pylint" # one of: text, json, junit, grouped, github, gitlab, pylint, azure

# Same as Black.
line-length = 80

# Exclude a variety of commonly ignored directories.
exclude = ["dist", "build", "proto", ".pytype", ".mypy_cache", ".git", ".venv", ".venv_universal", ".venv_arm"]

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"uic/*.py" = ["UP004", "F401", "ARG002"]



## pyright conf

[tool.pyright]
include = ["artisanlib", "plus" ] #, "test" ]
exclude = ["proto"]
# ignore = ["src/oldstuff"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "All"

#typeCheckingMode = "strict" # "off", "basic", "strict"

# strict disabled checks # "error", "warning", false, true
reportUnboundVariable = true # "error"
reportMissingParameterType = true
reportUnknownParameterType = true
#reportUnknownMemberType = false # PyQt signal/slot issues
reportUnknownArgumentType = true
reportGeneralTypeIssues = true
useLibraryCodeForTypes = true
reportInvalidTypeForm = true
reportUnnecessaryComparison = true
reportUninitializedInstanceVariable = true


## pytest conf

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -v"
testpaths = [
    "test",
]
pythonpath = [
  "."
]
filterwarnings = [
  "ignore::RuntimeWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]


## coverage

[tool.coverage.run]
omit = [
    "test/*",
    "uic/*",
    "proto/*",
    "help/*",
    "dist/*",
    "build/*",
    "artisan.py",
    "conftest.py",
    "pylupdate6pro.py",
    "artisan.py ",
    "setup-*.py",
    ]
[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complaint about PyQt5 compatibility
    "except ImportError",
    "from PyQt5.",
]
[tool.coverage.html]
directory = ".htmlcov"


## codespell

[tool.codespell]
skip = '*.ts,./coverage,./build,./dist*,./htmlcov,./*.spec,*.svg'
count = ''
quiet-level = 3
ignore-words-list = 'Abd,ser,alog,nd,iterm,dout,te,commandi,dout,exitt,currenty,exaust,controle,coment,controle,outweight,everytime,sade,weightIn,weightin,Caf,caf'



## ty conf

[tool.ty.src]
include = [
    "artisanlib/*.py",
    "plus/*.py",
#    "test/**/*.py"
]

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
#unused-ignore-comment = "warn"
#redundant-cast = "ignore"
#possibly-unbound-attribute = "error"
#possibly-unbound-import = "error"


## pyrefly conf

[tool.pyrefly]
project_includes = [
    "artisanlib/*.py",
    "plus/*.py",
#    "test/**/*.py"
]
project_excludes = [
    "**/build*",
    "**/dist*",
    "**/uic*",
    "**/misc*",
]
python_version = "3.12.0"
replace_imports_with_any = [
    "libusb_package.*",
    "uic.*",
]

[tool.pyrefly.errors]
missing-attribute = false   # does not understand PyQt connect/disconnect methods
missing-argument = false # pyrefly misinterprets @pyqtSlot() declarations
bad-argument-type = false # pyrefly misinterprets @pyqtSlot() declarations


[tool.zuban]
files = ["artisanlib/*.py", "plus/*.py"]
exclude = ['build', 'dist', 'uic', 'misc']

[tool.setuptools]
packages = ["artisanlib", "plus"]
